# Simulatore_F-16_c-

./: README.md
Simulatorec++/: CMakeLists.txt  Makefile
Simulatorec++/DocumentazioneSimualtore/: AUTOPILOT_ANALYSIS.md  CHANGE_Variables_Integration.md  Fonti.txt  IMPLEMENTATION_SUMMARY.md  Phyton.txt  Relazione_Simulatore_F16.md  verifica_6dof_equations.md
Simulatorec++/src/: .autotools  F16Actuators.hpp  F16Actuators.idl  F16ActuatorsPubSubTypes.cxx  F16ActuatorsPubSubTypes.hpp  F16AeroData.hpp  F16AeroState.hpp  F16AeroState.idl  F16AeroStatePubSubTypes.cxx  F16AeroStatePubSubTypes.hpp  F16Kinematics.hpp  F16Kinematics.idl  F16KinematicsPubSubTypes.cxx  F16KinematicsPubSubTypes.hpp  FBW_Types.hpp  FlightControlComputer.cpp  FlightControlComputer.hpp  FlightControlLaw.cpp  FlightControlLaw.hpp  FlightDisplay.cpp  FlightDisplay.hpp  MonitorDisplay.cpp  MonitorDisplay.hpp  MonitorNode.cpp  SharedMemory.hpp  Telemetry.cxx  Telemetry.hpp  Telemetry.idl  TelemetryPubSubTypes.cxx  TelemetryPubSubTypes.hpp  TestWindow.cpp  dds_fix.hpp  main.cpp
